# TermPop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  extension-release.yml
apps/termlens-tauri/: index.html  package-lock.json  package.json  vite.config.ts
apps/termlens-tauri/src/: main.ts  styles.css
apps/termlens-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/termlens-tauri/src-tauri/src/: main.rs
apps/termlens-windows/: Cargo.toml
apps/termlens-windows/src/: main.rs  text_sources.rs
apps/termpop-site/: README.md  index.html  package-lock.json  package.json  wrangler.toml
apps/termpop-site/src/: main.tsx  styles.css
crates/termlens-core/: Cargo.toml
crates/termlens-core/src/: lib.rs
crates/termpop-core/: Cargo.toml
crates/termpop-core/src/: lib.rs
docs/: phase-1-development-plan.md  tauri-windows-app.md  windows-app.md
extension/: package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/: manifest.json
extension/src/_locales/en/: messages.json
extension/src/_locales/zh_CN/: messages.json
extension/src/background/: cache.ts  detection.ts  explanations.ts  json.ts  llm-provider.ts  llm-queue.ts  menus.ts  prompts.ts  service-worker.ts  site-access.ts  utils.ts  wasm-runtime.ts
extension/src/content/: loader.js  main.ts  styles.css
extension/src/pdf-viewer/: pdf-viewer.css  pdf-viewer.html  pdf-viewer.ts
extension/src/popup/: popup.css  popup.html  popup.ts
extension/src/shared/: browser-utils.ts  byte-offset.ts  llm-defaults.ts  overlay.css  overlay.ts  settings.ts  term-matching.ts  types.ts
extension/src/wasm/: .gitignore  package.json  termlens_core.d.ts  termlens_core.js  termlens_core_bg.wasm  termlens_core_bg.wasm.d.ts  termpop_core.d.ts  termpop_core.js  termpop_core_bg.wasm  termpop_core_bg.wasm.d.ts
extension/test/: wasm.test.mjs
extension/test-pages/: llm-detection.html
packaging/windows/: termlens.iss
