[package]
name = "termlens-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
arboard = "3.6.1"
eframe = "0.34.3"
termlens-core = { path = "../../crates/termlens-core" }
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
